# velodyne_people_processing

./: .gitignore  README.md  links.txt  main.sh  reference.pcd
change_dec/: CMakeLists.txt  octree_change_detection.cpp  peak_detector.cpp  reference.pcd  set_cancelation.txt
change_det/: ctu_ref.pcd  peak_detector.cpp  peak_detector.h
people_msgs2csv/: people_msgs2csv.py
velodyne/: velodyne2pointcloud.launch  velodyne_detector.yaml  velodyne_interval.launch  velodyne_lifelong.launch  velodyne_lifelong.rviz  velodyne_show.launch
velodyne_lifelong/bayes_people_tracker/msg/: PeopleTracker.msg
velodyne_lifelong/bayes_people_tracker/src/people_tracker/: people_tracker.cpp
